// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object metadata update should fail when labelIdentifier is a UUID field (reserved for system objects) 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_OBJECT_INPUT",
      "userFriendlyMessage": "Invalid object input.",
    },
    "message": "Failed to compute search vector column expression for field id",
    "name": "UserInputError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a TEXT or NAME field 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_OBJECT_INPUT",
      "userFriendlyMessage": "Invalid object input.",
    },
    "message": "Failed to compute search vector column expression for field testName",
    "name": "UserInputError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a known field metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_OBJECT_INPUT",
      "userFriendlyMessage": "Invalid object input.",
    },
    "message": "New label identifier field not found for object metadata",
    "name": "UserInputError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a uuid 1`] = `
[
  {
    "extensions": {
      "code": "GRAPHQL_VALIDATION_FAILED",
      "http": {
        "status": 400,
      },
      "userFriendlyMessage": "An error occurred.",
      "value": "not-a-uuid",
    },
    "message": "Invalid UUID",
    "name": "ValidationError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is null 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_OBJECT_INPUT",
                "message": "labelIdentifierFieldMetadataId cannot be null",
                "userFriendlyMessage": "Field label identifier is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
              "universalIdentifier": Any<String>,
            },
            "metadataName": "objectMetadata",
            "status": "fail",
            "type": "update",
          },
        ],
      },
      "message": "Validation failed for 1 objectMetadata",
      "summary": {
        "objectMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;
